--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         "api/index.php": { "runtime": "vercel-php@0.4.0" }
     },
     "routes": [{
-        "src": "/master",
+        "src": "/(.*)",
         "dest": "/api/index.php"
     }],
     "env": {
